feat(vertex): scale points after parsing correctly

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 *.dylib
 *.idea
 *.wasm
-*.js
 
 # Test binary, built with `go test -c`
 *.test
@@ -23,3 +22,4 @@
 # Go workspace file
 go.work
 go.work.sum
+wasm_exec.js
