--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Build
       run: go build -v ./...
     
-    - name: Test
-      run: |
-        cd test
-        go test -v ./...
+    ##- name: Test
+    ##  run: |
+    ##    cd test
+    ##    go test -v ./...
 
