--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,27 +1,20 @@
-#name: Deploy example
-#
-#on:
-#  push:
-#    branches: [ "main" ]
-#  pull_request:
-#    branches: [ "main" ]
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#    - uses: actions/checkout@v4
-#
-#    - name: Set up Go
-#      uses: actions/setup-go@v5
-#      with:
-#        go-version: '1.22'
-#
-#    - name: Build
-#      run: go build -v ./...
-#    
-#    ##- name: Test
-#    ##  run: |
-#    ##    cd test
-#    ##    go test -v ./...
-#
+name: Deploy example
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        GITHUB_TOKEN: ${{ github.TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: dist
