--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -15,6 +15,4 @@ jobs:
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        GITHUB_TOKEN: ${{ github.TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: dist
+        folder: dist
