fix(cicd): added ssh-key

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -15,4 +15,5 @@ jobs:
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
       with:
+        ssh-key: ${{ secrets.DEPLOY_KEY }}
         folder: dist
