--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -20,8 +20,12 @@ jobs:
     - name: Install and Build
       run: |
         mkdir -p dist
+        ls -lha
         cd wasm
+        ls -lha
+        chmod +x build
         ./build
+        ls -lha
         mv main.wasm ../dist
         cd ../dist
         cp ../example/public/index.html .
